2013-05-13  Dario Rodriguez <dario@artica.es>

	* include/functions.php: Added maintenance to priority render.
	* include/functions_graph.php: Create new function graph_incident_priority.
	* include/constants.php: Created constants for priority levels and colors.
	* include/functions_incidents.php: Updated incident statistic view and
	created several new functions for this view.

2013-05-13  Vanessa Gil <vanessa.gil@artica.es>

	* index.php: develop_bypass=0

2013-05-13  Vanessa Gil <vanessa.gil@artica.es>

	* include/constants.php
	  include/functions_db.php
	  include/functions_incidents.php
	  operation/inventories/inventory_detail.php
	  operation/inventories/inventory_incidents.php
	  operation/inventories/inventory_relationship.php
	  operation/inventories/inventory_tracking: Added
	'object type', 'public' and 'incidents' to inventory tracking.

2013-05-13  Vanessa Gil <vanessa.gil@artica.es>

	* operation/inventories/inventory_detail.php
	  operation/inventories/inventory_incidents.php
	  operation/inventories/inventory_relationship.php
	  operation/inventories/inventory_tracking: Added
	incident affecting inventory tracking.

	* operation/inventories/inventory_incident_tracking.php: Added file.

2013-05-10  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  extras/migrate.ql
	  include/constants.php
	  operation/inventories/inventory_detail.php
	  operation/inventories/inventory_incidents.php
	  operation/inventories/inventory_relationship.php: Added
	inventory tracking.

	* operation/inventories/inventory_tracking.php: Added file.

2013-05-08  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_dashboard.php: Fixed error
	with custom search now there is a filter per user.

2013-05-07  Dario Rodriguez <dario@artica.es> 

	* operation/incidents/incident_detail.php,
	include/js/integria_incident_search.js: Added a button
	to clean parent incident field

2013-05-07  Dario Rodriguez <dario@artica.es> 